WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28874
Uninitialized variable in XSSAuditor
https://bugs.webkit.org/show_bug.cgi?id=28874
Summary
Uninitialized variable in XSSAuditor
Adam Barth
Reported
2009-09-01 07:48:22 PDT
See
http://code.google.com/p/chromium/issues/detail?id=20778
Patch forthcoming.
Attachments
Patch v1
(1.09 KB, patch)
2009-09-01 07:49 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2009-09-01 07:49:58 PDT
Created
attachment 38865
[details]
Patch v1
Adam Barth
Comment 2
2009-09-01 09:05:17 PDT
Comment on
attachment 38865
[details]
Patch v1 Rejecting patch 38865 from commit-queue. This patch will require manual commit. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 cwd: None
Adam Barth
Comment 3
2009-09-01 09:09:20 PDT
Comment on
attachment 38865
[details]
Patch v1 Clearing flags on attachment: 38865 Committed
r47937
: <
http://trac.webkit.org/changeset/47937
>
Adam Barth
Comment 4
2009-09-01 09:09:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug