2009-09-01  Adam Barth  <abarth@webkit.org>

Reviewed by Sam Weinig.

        Uninitialized variable in XSSAuditor
        https://bugs.webkit.org/show_bug.cgi?id=28874

        One ought to initialize variables before use even when it doesn't
        matter.  No behavior change.

        * page/XSSAuditor.h:
        (WebCore::XSSAuditor::CachingURLCanonicalizer::CachingURLCanonicalizer):

git-svn-id: svn://svn.chromium.org/blink/trunk@47937 bbb929c8-8fbe-4397-9dbb-9b2b20218538