third_party/WebKit/WebCore/page/XSSAuditor.h
@@ -103,6 +103,7 @@ namespace WebCore {
         class CachingURLCanonicalizer
         {
         public:
+            CachingURLCanonicalizer() : m_decodeEntities(false) { }
             String canonicalizeURL(const String& url, const TextEncoding& encoding, bool decodeEntities);
 
         private:
